kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/identity_eq_transparent/src/mod.k
pub type Eq(T: Type, _: T, _: T) {
    .refl(T: Type, t: T): Eq(T, t, t),
}

pub let(*) identity = fun _(T: Type, t: T): T {
    t
};

pub let(*) identity_eq = fun _(T: Type, t: T): Eq(T, t, identity(T, t)) {
    Eq.refl(T, t)
};
